@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
 ---
 Language:        Cpp
 # BasedOnStyle:  LLVM
