@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
 tests/catch.hpp
 tests/fakeit.hpp
 fuzzer/fakeit_standalone.hpp
