@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
+
 Active Kdenlive authors
 
     Jean-Baptiste Mardelle <jb@kdenlive.org>
