@@ -1,0 +1,2 @@
+SPDX-FileCopyrightText: none
+SPDX-License-Identifier: CC0-1.0
