@@ -1,3 +1,6 @@
+<!-- SPDX-FileCopyrightText: none -->
+<!-- SPDX-License-Identifier: CC0-1.0 -->
+
 <RCC>
     <qresource prefix="pics">
         <file alias="kdenlive.png">../data/icons/48-apps-kdenlive.png</file>
